[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemies/little_star.png" type="Texture" id=1]
[ext_resource path="res://enemies/little_star/LittleStar.gd" type="Script" id=2]
[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://guns/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://bullets/ball_medium/BallMedium.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="LittleStar" instance=ExtResource( 3 )]
modulate = Color( 0.882353, 0.243137, 0.972549, 1 )
collision_layer = 4
mass = 50.0
linear_damp = 2.0
angular_velocity = 2.0
angular_damp = 0.0
script = ExtResource( 2 )
speed = 900.0
wave_points = 120

[node name="Sprite" parent="." index="0"]
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 1 )

[node name="Hitbox" parent="." index="1"]
scale = Vector2( 1.75, 1.75 )
shape = SubResource( 1 )

[node name="Stats" parent="." index="2"]
max_health = 80

[node name="Gun1" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 5.87106e-06, -40 )
rotation = 5.87106e-06
bullet_velocity = 180
BulletType = ExtResource( 5 )

[node name="Cooldown" parent="Gun1" index="0"]
wait_time = 0.24

[node name="Gun2" parent="." index="5" instance=ExtResource( 4 )]
position = Vector2( -1.45519e-11, 40 )
rotation = -3.14159
bullet_velocity = 180
BulletType = ExtResource( 5 )

[node name="Gun3" parent="." index="6" instance=ExtResource( 4 )]
position = Vector2( -40, 7.70039e-05 )
rotation = -1.5708
bullet_velocity = 180
BulletType = ExtResource( 5 )

[node name="Gun4" parent="." index="7" instance=ExtResource( 4 )]
position = Vector2( 40, -7.70039e-05 )
bullet_velocity = 180
BulletType = ExtResource( 5 )

[node name="SpreadCooldown" type="Timer" parent="." index="8"]
one_shot = true

[editable path="Gun1"]
